manifests/middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-root-to-admin
  namespace: simple-http
spec:
  redirectRegex:
    regex: ^/$
    replacement: /admin/login/
    permanent: true
