manifests/uptime-deployment.yaml
# uptime-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: simple-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      priorityClassName: low-priority
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data
      volumes:
        - name: uptime-kuma-data
          hostPath:
            path: /mnt/data/uptime-kuma-data
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: simple-http
spec:
  selector:
    app: uptime-kuma
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
