manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - prometheus.pranavwadge.cloud
      secretName: prometheus-tls
  rules:
    - host: prometheus.pranavwadge.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kind-prometheus-kube-prome-prometheus
                port:
                  number: 9090  # ✅ use port number explicitly
