manifests/simplehttp.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplehttp-deployment
  namespace: simple-http
spec:
  selector:
    matchLabels:
      app: simplehttp
  replicas: 1
  template:
    metadata:
      labels:
        app: simplehttp
    spec:
      priorityClassName: medium-priority
      containers:
      - name: simplehttp
        image: pareshpawar/simple-http-server:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: simplehttp-service
  namespace: simple-http
spec:
  type: ClusterIP
  selector:
    app: simplehttp
  ports:
  - port: 8009
    targetPort: 8081

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplehttp-ingress
  namespace: simple-http
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - simple.pranavwadge.cloud
      secretName: simplehttp-tls
  rules:
    - host: simple.pranavwadge.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simplehttp-service
                port:
                  number: 8009
